# RADIOBRO

./: LICENSE  README  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
modules/: dicom_loader.py  inference_engine.py  model_predictor.py  model_trainer.py  preprocessor.py
tests/: test_dicom.py
