[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiobro"
version = "0.1.0"
description = "Training a radiology model to read DICOM files"
authors = [{name="RADIOBRO Team", email="info@example.com"}]
readme = "README"
requires-python = ">=3.8"
dependencies = [
    "monai",
    "pydicom",
    "flask",
    "streamlit",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
