[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radiobro"
version = "0.1.0"
description = "Radiology model training utilities."
readme = "README"
requires-python = ">=3.8"
authors = [{name = "Unknown"}]
dependencies = [
    "monai",
    "pydicom",
    "streamlit",
]
